k8s/pvc/Service-webui-pvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: webui-service
  labels:
    run: webui-service
spec:
  ports:
  - name: webui-service
    port: 8800
    protocol: TCP
  selector:
    app: pvc-engine
