k8s/pvc/svc-webui.yaml
apiVersion: v1
kind: Service
metadata:
  name: engine-webui
  labels:
    run: engine-webui
spec:
  type: NodePort
  ports:
  - name: engine-webui
    port: 8800
    protocol: TCP
  selector:
    app: engine
