k8s/pvc/Ingress-webui-pvc.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: ingress-webui
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: 128m
spec:
  rules:
  - http:
      paths: 
      - backend:
          service: 
            name: webui-service
            port: 
              number: 8800
        path: /
        pathType: Prefix
